--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
   <body>
     <meta charset="utf-8" />
     <div id = 'h'>
-      <h1>Americle</h1>
-      <h3>Can you guess the American city?</h3>
+      <h1>Americle</h1><h5>by Brandon Kaminski</h5>
       <input id = 'enter' type="text"/>
       <br/>
       <span><select id="states">Here</select><button id="guess">Guess</button></span>
-      <h4 id = 'resp'>Enter a city above!</h4>
+      <h3 id="resp">Can you guess the American city?</h3>
     </div>
     <div id = 'map'></div>
     <div id = 'counter'>
