Logos fix + CSS full-screen fix

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
-    
+    <link rel = "icon" href = "icon.png" type = "image/x-icon"/>
     <link rel = "stylesheet" href = "rawhtml.css"/>
     <title>Americle</title>
   </head>
   <body>
     <meta charset="utf-8" />
     <div id = 'h'>
-      <h1>Americle</h1><h5>by Brandon Kaminski</h5>
+      <p><img src="logo.png" height="50"/></h1></p>
+      <p id="byline">by <a target= "blank" href="https://brandon-kaminski.tech">Brandon Kaminski</a></p>
       <input id = 'enter' type="text"/>
       <br/>
       <span><select id="states">Here</select><button id="guess">Guess</button></span>
