--- a/index.html
+++ b/index.html
@@ -12,15 +12,43 @@
     <div id = 'h'>
       <p><img src="logo.png" height="50"/></h1></p>
       <p id="byline">by <a target= "blank" href="https://brandon-kaminski.tech">Brandon Kaminski</a></p>
+      <p id="openpar"><a id="openhow" href="#">How to Play</a></p>
       <input id = 'enter' type="text"/>
       <br/>
       <span><select id="states">Here</select><button id="guess">Guess</button></span>
       <h3 id="resp">Can you guess the American city?</h3>
     </div>
     <div id = 'map'></div>
+    <div id='howtoplay'>
+      <h2>How to play</h2>
+      <button id="closehow">x</button>
+      <p>Welcome to Americle! Your goal is to find a <b>target city</b>, 
+        picked every midnight EST, by using other cities' distances away from it. Click <a href="#">here</a> to see a list of previous cities.</p>
+        <ul>
+          <li>
+            <p>Enter in a city name in the text box above: if "Any state" is selected,
+            it will find the largest city with that name anywhere in the country. If you want a 
+            specific state's city, select it from the dropdown below.
+            </p>
+          </li>
+          <li>
+            <p>To make a guess, press the Guess button or the Enter key. You'll 
+              then see the distance away from the target city you are in a popup by that city's 
+              location on the map, with a red dot being far from target, and a green dot being close.</p>
+          </li>
+          <li>
+            <p>See all previous guesses, sorted by distance away from target, in the bottom left.</p>
+          </li>
+          <li>
+            <p>The bottom left panel will light up <span style="color:green;">green</span> when you've found the city!</p>
+          </li>
+        </ul>
+        <h2>Good luck!</h2>
+        </div>
+    </div>
     <div id = 'counter'>
       <table id = "guesses">
-        <tr><th>Guess</th><th>City</th><th>Distance (km)</th></tr>
+        <tr><th>Guess</th><th>City</th><th>Distance (mi)</th></tr>
       </table>
     </div>
 
