failed cookies + added previous cities

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <p><img src="logo.png" height="50"/></h1></p>
       <p id="byline">by <a target= "blank" href="https://brandon-kaminski.tech">Brandon Kaminski</a></p>
       <p id="openpar"><a id="openhow" href="#">How to Play</a></p>
+      <p id="puzzlenum"></p>
       <input id = 'enter' type="text"/>
       <br/>
       <span><select id="states">Here</select><button id="guess">Guess</button></span>
@@ -23,7 +24,7 @@
       <h2>How to play</h2>
       <button id="closehow">x</button>
       <p>Welcome to Americle! Your goal is to find a <b>target city</b>, 
-        picked every midnight EST, by using other cities' distances away from it. Click <a href="#">here</a> to see a list of previous cities.</p>
+        picked every midnight EST, by using other cities' distances away from it. Click <a href="./previous.html">here</a> to see a list of previous cities.</p>
         <ul>
           <li>
             <p>Enter in a city name in the text box above: if "Any state" is selected,
