_blank on prev link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h2>How to play</h2>
       <button id="closehow">x</button>
       <p>Welcome to Americle! Your goal is to find a <b>target city</b>, 
-        picked every midnight EST, by using other cities' distances away from it. Click <a target = "blank" href="./previous.html">here</a> to see a list of previous cities.</p>
+        picked every midnight EST, by using other cities' distances away from it. Click <a target = "_blank" href="./previous.html">here</a> to see a list of previous cities.</p>
         <ul>
           <li>
             <p>Enter in a city name in the text box above: if "Any state" is selected,
