get geographer mode + fix white space

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <p id="byline">by <a target= "blank" href="https://brandon-kaminski.tech">Brandon Kaminski</a></p>
       <p id="openpar"><a id="openhow" href="#">How to Play</a></p>
       <p id="puzzlenum"></p>
+      <p id="geomode"></p>
       <input id = 'enter' type="text"/>
       <br/>
       <span><select id="states">Here</select><button id="guess">Guess</button></span>
@@ -25,6 +26,7 @@
       <button id="closehow">x</button>
       <p>Welcome to Americle! Your goal is to find a <b>target city</b>, 
         picked every midnight EST, by using other cities' distances away from it. Click <a target = "_blank" href="./previous.html">here</a> to see a list of previous cities.</p>
+        <p id ="mode"></p>
         <ul>
           <li>
             <p>Enter in a city name in the text box above: if "Any state" is selected,
