--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8" />
     <div id = 'h'>
       <p><img src="logo.png" height="50"/></h1></p>
-      <p id="byline">by <a target= "blank" href="https://brandon-kaminski.tech">Brandon Kaminski</a></p>
+      <p id="byline">by <a target= "_blank" href="https://brandon-kaminski.tech">Brandon Kaminski</a></p>
       <p id="openpar"><a id="openhow" href="#">How to Play</a></p>
       <p id="puzzlenum"></p>
       <p id="geomode"></p>
