--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
         <h2>Good luck!</h2>
         </div>
     </div>
+    <div id='share'>
+      <h2>You Win!</h2>
+      <h3 id="guesscount"></h3>
+      <button id="closeshare">x</button>
+      <div id= 'sharepar'></div>
+      <button id="sharebutton"><img src="shareimg.png" height="20"/> SHARE</button>
+    </div>
+    </div>
     <div id = 'counter'>
       <table id = "guesses">
         <tr><th>Guess</th><th>City</th><th>Distance (mi)</th></tr>
